
2004/04/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added base module "args" which transforms command line arguments to
  a GWEN_DB. It performs some checks on the arguments given and makes it
  easier to create help screens.
- debugged module "args" (it now works as intended)


2004-04-16  Christian Stimming <stimming@tuhh.de>

	* src/base/debug.c: Fix DBG_* functions that are the replacements
	for their variadic-macros counterpart. Unfortunately this error
	caused every gwen version built with --disable-variadic-macros to
	crash -- sorry. But it is fixed now.


2004-04-08  Christian Stimming <stimming@tuhh.de>

	* m4/ssl.m4: For openssl on windows, check more than one directory
	for the location of the DLLs.


===========================================================================
MARK: released gwenhywfar-0.9.9 (2004/04/08)
===========================================================================


2004/04/08: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io/bufferedio: 
  - added flag functions to set/get flags which control the behaviour of a 
    BufferedIO
  - split into multiple object files for the different supported BufferedIOs
  - now the GWEN_BUFFEREDIO type is opaque, its strcuture is no longer
    exported to the supported BufferedIOs
  - now uses the inherit module
  The changes above now allow for new BufferedIOs to be created outside Gwen.


2004/04/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- os/process:
  - added functions to set/retrieve flags to modify the behaviour of the 
    GWEN_PROCESS code.
    The most important (and for now the only) flags are:
    - GWEN_PROCESS_FLAGS_REDIR_STDIN
    - GWEN_PROCESS_FLAGS_REDIR_STDOUT
    - GWEN_PROCESS_FLAGS_REDIR_STDERR
    These flags make Gwen redirect the corresponding std stream so that the