@@ -5,6 +5,8 @@
   a GWEN_DB. It performs some checks on the arguments given and makes it
   easier to create help screens.
 - debugged module "args" (it now works as intended)
+- GWEN_Args_Usage() is now able to produce an ASCII help screen using
+  GWEN_ARGS
 
 
 2004-04-16  Christian Stimming <stimming@tuhh.de>
